--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -72,7 +72,65 @@
             background-color: #9ca3af;
         }
 
+        #start-menu {
+            max-width: 400px;
+            width: 100%;
+            padding: 2rem;
+            background-color: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .start-instruction {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: #1f2937;
+            margin-bottom: 1.5rem;
+        }
         
+        #diff-selector {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+            margin-bottom: 2rem;
+        }
+
+        .diff-option {
+            background-color: #4338ca;
+            color: white;
+            padding: 1rem 0.5rem;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            font-weight: 700;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.2s, transform 0.1s;
+        }
+        
+        .diff-option:hover {
+            background-color: #3730a3;
+            transform: translateY(-2px);
+        }
+
+        #demo-div button {
+            background-color: #059efb;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 0.5rem;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+        #demo-div button:hover {
+            background-color: #7f00f5;
+        }
+
+        .hidden {
+            display: none;
+        }
 
     </style>
 </head>
@@ -85,7 +143,28 @@
         </p>
     </div>
 
-    <div id="game-grid" class="card-grid-container">
+    <div id="start-menu">
+        <div id="diff-selector">
+            <div class="diff-option" data-size="5">Easy</div>
+            <div class="diff-option" data-size="4">Medium</div>
+            <div class="diff-option" data-size="6">Hard</div>
+            <div class="diff-option" data-size="8">Super Hard</div>
+        </div>
+        <div id="demo-div">
+            <button id="how-to-play-btn">How to Play?</button>
+        </div>
+    </div>
+
+    <div id="demo-content" class="hidden">
+        Demo Content
+    </div>
+
+    <div id="game-grid" class="card-grid-container hidden">
+        <div id="game-info" style="text-align: left; margin-bottom: 1rem; color: #4b5563; font-weight: 600; display: flex; justify-content: space-between;">
+            <p>Score: <span id="score">0</span></p>
+            <p>Time: <span id="timer">0s</span></p>
+        </div>
+
         <div class="grid-layout">
             <!-- Row 1 -->
             <div class="card"></div>
@@ -112,6 +191,6 @@
             <div class="card"></div>
         </div>
     </div>
-
+    <script src="./color_memory.js" type="text/javascript"></script>
 </body>
 </html>
