writing game logic

--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -145,10 +145,10 @@
 
     <div id="start-menu">
         <div id="diff-selector">
-            <div class="diff-option" data-size="5">Easy</div>
-            <div class="diff-option" data-size="4">Medium</div>
-            <div class="diff-option" data-size="6">Hard</div>
-            <div class="diff-option" data-size="8">Super Hard</div>
+            <div class="diff-option" data-size="0">Easy</div>
+            <div class="diff-option" data-size="1">Medium</div>
+            <div class="diff-option" data-size="2">Hard</div>
+            <div class="diff-option" data-size="3">Super Hard</div>
         </div>
         <div id="demo-div">
             <button id="how-to-play-btn">How to Play?</button>
@@ -166,29 +166,29 @@
         </div>
 
         <div class="grid-layout">
-            <!-- Row 1 -->
+            <!-- Row 1 >
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
             
-            <!-- Row 2 -->
+            <!-- Row 2 >
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
 
-            <!-- Row 3 -->
+            <!-- Row 3 >
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
 
-            <!-- Row 4 -->
+            <!-- Row 4 >
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
-            <div class="card"></div>
+            <div class="card"></div-->
         </div>
     </div>
     <script src="./color_memory.js" type="text/javascript"></script>
