Adding dynamic grid display based on difficulty

--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -40,8 +40,8 @@
         }
 
         .card-grid-container {
-            max-width: 400px;
-            width: 100%;
+            /*max-width: 400px;*/
+            width: 80vw;
             padding: 1rem;
             background-color: white;
             border-radius: 0.75rem;
@@ -65,6 +65,20 @@
             font-size: 0;
             
             background-color: #d1d5db;
+            border-radius: 0.5rem;
+        }
+
+        .face {
+            aspect-ratio: 1 / 1; 
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s, background-color 0.3s;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 90%;
+            
+            background-color: #ffffff;
             border-radius: 0.5rem;
         }
 
@@ -165,7 +179,7 @@
             <p>Time: <span id="timer">0s</span></p>
         </div>
 
-        <div class="grid-layout">
+        <div id="card-grid" class="grid-layout">
             <!-- Row 1 >
             <div class="card"></div>
             <div class="card"></div>
