--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -40,7 +40,7 @@
         }
 
         .card-grid-container {
-            /*max-width: 400px;*/
+            max-width: 900px;
             width: 80vw;
             padding: 1rem;
             background-color: white;
@@ -69,16 +69,15 @@
         }
 
         .face {
-            aspect-ratio: 1 / 1; 
+            aspect-ratio: 1 / 1;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s, background-color 0.3s;
             cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 90%;
+            font-size: 70%;
             
-            background-color: #ffffff;
             border-radius: 0.5rem;
         }
 
