Added the queue logic and async click evaluation logic;)

--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -145,6 +145,10 @@
             display: none;
         }
 
+        .clicked {
+
+        }
+
     </style>
 </head>
 <body class="">
@@ -175,6 +179,7 @@
     <div id="game-grid" class="card-grid-container hidden">
         <div id="game-info" style="text-align: left; margin-bottom: 1rem; color: #4b5563; font-weight: 600; display: flex; justify-content: space-between;">
             <p>Score: <span id="score">0</span></p>
+            <button id="reset-btn">RESET</button>
             <p>Time: <span id="timer">0s</span></p>
         </div>
 
