--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -186,7 +186,7 @@
         }
 
         /* --- Button Styles --- */
-        #closePopupBtn {
+        .popup-btn {
             padding: 10px 20px;
             margin-top: 15px;
             border: none;
@@ -196,13 +196,23 @@
             transition: background-color 0.3s ease;
         }
 
-        #closePopupBtn {
+        .popup-btn {
             background-color: #dc3545;
             color: white;
         }
 
-        #closePopupBtn:hover {
+        .popup-btn:hover {
             background-color: #c82333;
+        }
+
+        #name-input {
+            padding: 10px;
+            margin: 15px 0;
+            width: 90%;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            text-align: center;
         }
 
     </style>
@@ -214,6 +224,15 @@
         <p class="game-quote">
             Challenge your mind: Can you match the colors before time runs out?
         </p>
+        <div id="player-name-display">Player: Guest</div>
+
+        <div id="name-popup" class="popup-overlay" style="display: none;">
+            <div class="popup-content">
+                <h3>Welcome! Enter Player Name</h3>
+                <input type="text" id="name-input" placeholder="Enter your name here..." maxlength="20">
+                <button id="submitNameBtn" class="popup-btn">OK</button>
+            </div>
+        </div>
     </div>
 
     <div id="start-menu">
@@ -229,7 +248,7 @@
     </div>
 
     <div id="demo-content" class="hidden">
-        Demo Content
+
     </div>
 
     <div id="game-grid" class="card-grid-container hidden">
@@ -240,29 +259,7 @@
         </div>
 
         <div id="card-grid" class="grid-layout">
-            <!-- Row 1 >
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            
-            <!-- Row 2 >
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-
-            <!-- Row 3 >
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-
-            <!-- Row 4 >
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div-->
+            <!--div class="card"></div-->
         </div>
     </div>
 
@@ -271,7 +268,7 @@
             <h3>Well Done!</h3>
             <p>Score: <span id="result-score">0</span></p>
             <p>Time: <span id="result-time">0s</span></p>
-            <button id="closePopupBtn">Save Progress</button>
+            <button id="closePopupBtn" class="popup-btn">Save Progress</button>
         </div>
     </div>
     <script src="./color_memory.js" type="text/javascript"></script>
