Probably the final commit - added timer, highscores

--- a/color_memory_game/color_memory.html
+++ b/color_memory_game/color_memory.html
@@ -253,7 +253,7 @@
 
     <div id="game-grid" class="card-grid-container hidden">
         <div id="game-info" style="text-align: left; margin-bottom: 1rem; color: #4b5563; font-weight: 600; display: flex; justify-content: space-between;">
-            <p>Score: <span id="score">0</span></p>
+            <p>Your Current Record: <span id="score">--</span></p>
             <button id="reset-btn">RESET</button>
             <p>Time: <span id="timer">0s</span></p>
         </div>
@@ -266,7 +266,6 @@
     <div id="popup-card" class="popup-overlay" style="display: none;">
         <div class="popup-content">
             <h3>Well Done!</h3>
-            <p>Score: <span id="result-score">0</span></p>
             <p>Time: <span id="result-time">0s</span></p>
             <button id="closePopupBtn" class="popup-btn">Save Progress</button>
         </div>
